# clip-prompt

./: .gitignore  ACTION_PLAN.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  project.md
.github/workflows/: release.yml
scripts/: release.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
